--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <![endif]-->
 
     <!-- Estilo customizado -->
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="CSS/estilo.css">
 
     <title>Danki Panki Crochê - Arte entre Fios</title>
   </head>
@@ -27,10 +27,10 @@
       <nav class="navbar navbar-expand-sm navbar-secondary">
   		<div class="container">
             <a href="index.html" class="navbar-brand">
-             <img src="logo.png" class="logo" width="150">
+             <img src="imagens/logo.png" class="logo" width="150">
             </a>
              <a href="Sobre.html" class="navbar-brand">
-             <img src="slogan.png" class="slogan" width="400">
+             <img src="imagens/slogan.png" class="slogan" width="400">
              </a>
 
              <button class="navbar-toggler" data-toggle="collapse" data-target="#menu-principal">
@@ -77,7 +77,7 @@
 
            <div class="col-md-6 d-flex">
             <div class="imagem mr-auto">
-              <img src="imagemcroche1.jpg"  class="img-fluid rounded-circle" width="600px">
+              <img src="imagens/imagemcroche1.jpg"  class="img-fluid rounded-circle" width="600px">
               
             </div> 
           </div> 
@@ -100,7 +100,7 @@
 
            <div class="col-md-6 d-flex">
             <div class="imagem mr-auto">
-              <img src="imagemcroche.png" class="img-fluid rounded-circle" width="500px">
+              <img src="imagens/imagemcroche.png" class="img-fluid rounded-circle" width="500px">
             </div>
           </div>
           </div>
@@ -120,7 +120,7 @@
       </div>
       <div class="col-md-6 d-flex">
             <div class="imagem mr-auto">
-              <img src="bolsavivi.jpg" class="img-fluid rounded-circle" width="600px">
+              <img src="imagens/bolsavivi.png" class="img-fluid rounded-circle" width="600px">
               
             </div>
           </div>
