--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              <img src="imagens/logo.png" class="logo" width="150">
             </a>
              <a href="Sobre.html" class="navbar-brand">
-             <img src="imagens/slogan.png" class="slogan" width="400">
+             <img src="imagens/slogan.png" class="slogan ml-auto" width="400">
              </a>
 
              <button class="navbar-toggler" data-toggle="collapse" data-target="#menu-principal">
