--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
   	<header><!--início cabeçalho-->
-      <nav class="navbar navbar-expand-sm navbar-secondary">
+      <nav class="navbar navbar-expand-md navbar-secondary">
   		<div class="container">
             <a href="index.html" class="navbar-brand">
              <img src="imagens/logo.png" class="logo" width="150">
